2009-01-11  Aidan Kehoe  <kehoea@parhasard.net>

	* subr.el: Correct a comment, we now have #'syntax-after in
	syntax.el.
	(subr-arity): New.
	Docstring and API taken initially from GNU's data.c, revision
	1.275, GPLv2.

2009-01-01  Stephen J. Turnbull  <stephen@xemacs.org>

	* descr-text.el (describe-char-unicodedata-file):
	Nuke build-breaking computation from defcustom initializer.

2008-12-30  Aidan Kehoe  <kehoea@parhasard.net>

	* make-docfile.el: 
	Use absolute source file names when checking if DOC is out of
	date, don't use relative paths that may not be related to the
	current directory.	

2008-12-28  Aidan Kehoe  <kehoea@parhasard.net>

	* coding.el (query-coding-region): 
	(query-coding-string): 
	Make these defsubsts, they're short enough and they're called
	explicitly rarely enough that it make some sense. The alternative
	would be compiler macros that avoid the binding of the arguments. 
	(unencodable-char-position): 
	Document where the docstring and API are from. 
	Correct a special case for zero--check-argument-type returns nil
	when it succeeds, we can't usefully chain its result in an and
	here. 
	(check-coding-systems-region): New. API taken from GNU; docstring
	and implementation are independent. 
	(encode-coding-char): 
	Add an optional third argument, as used by recent GNU. Document
	the origen of the docstring. 
	(default-query-coding-region): Add a short docstring to the
	non-Mule implementation of this function. 
	* unicode.el: 
	Don't set the query-coding-function property for unicode coding
	systems if we're on non-mule. Unintern
	unicode-query-coding-region, unicode-query-coding-skip-chars-arg
	in the same context. 

2008-12-30  Aidan Kehoe  <kehoea@parhasard.net>

	* frame.el (display-mouse-p): 
	(display-popup-menus-p): 
	(display-images-p): 
	(display-selections-p): 
	(display-visual-class): 
	Make all these functions more general, do not hard code device
	type symbols where that is inappropriate. 
